--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,8 @@ license = "GPL-3.0"
 
 [dependencies]
 termion = "1.5.6"
-systemstat = "*"
-fsi = "*"
+systemstat = "0.1.10"
+fsi = "0.1.0"
 home = "0.5.3"
-nixinfo = "*"
-regex = "*"
+nixinfo = "0.3.3"
+regex = "1.5.5"
