--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "gxrfetch"
-description = "A simple but very customizable fetch program"
-version = "0.8.0"
+description = "A simple and very customizable fetch program"
+version = "0.8.1"
 edition = "2021"
 license = "GPL-3.0"
 
